<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <android.support.v7.widget.AppCompatImageView

        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="25dp"

        android:src="@drawable/img" />


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginLeft="25dp"

        android:layout_marginTop="297dp"
        android:layout_marginRight="25dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_below="@+id/email"
        android:layout_marginLeft="25dp"

        android:layout_marginRight="25dp"



        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/email_sign_in_button"

        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginLeft="25dp"

        android:layout_marginTop="416dp"
        android:layout_marginRight="25dp"
        android:text="@string/title_activity_login"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/createaccount"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email_sign_in_button"

        android:layout_marginLeft="25dp"


        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:text="@string/CreateAccount"
        android:textStyle="bold" />





</RelativeLayout>